--- a/css/component.css
+++ b/css/component.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'bpmenu';
-	src:url('http://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.eot');
-	src:url('http://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.eot?#iefix') format('embedded-opentype'),
-		url('http://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.woff') format('woff'),
-		url('http://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.ttf') format('truetype'),
-		url('http://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.svg#bpmenu') format('svg');
+	src:url('https://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.eot');
+	src:url('https://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.eot?#iefix') format('embedded-opentype'),
+		url('https://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.woff') format('woff'),
+		url('https://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.ttf') format('truetype'),
+		url('https://www.terapiacuernavaca.com/fonts/bpmenu/bpmenu.svg#bpmenu') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
